open required packages to unnamed modules