@@ -122,6 +122,7 @@ runOsgi {
     if (port) {
         javaArgs += ' -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=' + port
     }
+    javaArgs += ' --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.desktop/com.apple.eawt=ALL-UNNAMED --add-opens java.desktop/com.apple.laf=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED'
     configSettings = 'felix'
     osgiMain = project(':')
     config += [
